Adding Error-Handling for order-service